Entrega de Atividade

--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 *{
-    padding: 0%;
+    padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-
 :root{
     --primary-color: #F5CF06;
     --secondary-color: #8E4106;
@@ -14,9 +13,11 @@ body{
     background-color: var(--primary-color);
     display: flex;
     flex-direction: column;
+    font-family: 'Righteous', cursive;
 }
 
 .container{
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     width: 90vw;
@@ -24,11 +25,10 @@ body{
 }
 
 header{
-    background-color: aqua;
     margin-top: 70px;
 }
 
-header a{  /* Corrigido de .header para header */
+header a{
     grid-column: 1/-1;
     display: flex;
     align-items: center;
@@ -36,32 +36,118 @@ header a{  /* Corrigido de .header para header */
     text-decoration: none;
     color: var(--secondary-color);
     font-size: 2rem;
-    font-family: "Righteous", sans-serif;
-    font-weight: 400;
-    font-style: normal;
 }
-
 main{
-    background-color: tomato;
     flex-grow: 1;
 }
 
 .title{
-    background-color: green;
+    position: relative;
     grid-column: 1/-1;
+    place-self: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.title__text{
+    font-size: 20vw;
+    color: #fff;
+}
+.title__transparent{
+    position: absolute;
+    top: -50%;
+    font-size: 27vw;
+    color: #fff5;
+    z-index: -1;
 }
 
-.description{
-    background-color: plum;
+.description {
     grid-column: 1/7;
+    place-self: start;
+    color: var(--secondary-color);
+    z-index: 1;
 }
-
-.action{
-    background-color: aqua;
+.description__title{
+    font-size: 4rem;
+}
+.description__text{
+    width: 500px;
+    font-size: 1.2rem;
+}
+.action {
     grid-column: 7/-1;
+    place-self: start end;
+    height: 100px;
+    width: 411px;
+    background-color: var(--secondary-color);
+    color: #fff;
+    font-size: 3rem;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
 }
 
-footer{
-    background-color: pink;
+.footer__text{
+    grid-column: 1/-1;
+    place-self: center;
     margin-bottom: 24px;
+    color: var(--secondary-color);
+    font-size: 1rem;
+}
+
+.pikachu-image{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/* TABLET */
+
+@media (max-width:960px) {
+    .container {
+        grid-template-columns: 1fr;
+    }
+    header{
+        margin-top: 30px;
+    }
+    .title{
+        place-self: start center;
+        transform: translateY(20%);
+    }
+    .description{
+        grid-column: 1;
+        grid-row: 2;
+        place-self: center;
+        text-align: center;
+    }
+    .action{
+        grid-column: 1;
+        grid-row: 2;
+        place-self: end center;
+        margin-bottom: 24px;
+    }
+
+    footer{
+        display: none;
+    }
+}
+
+@media (max-width:640px) {
+    .description__title{
+        font-size: 10vw;
+    }
+    .description__text  {
+        display: none;
+    }
+    .action{
+        width: 100%;
+        font-size: 10vw;
+    }
+    .pikachu-image{
+        width: 90vw;
+    }
 }
